Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tree-deployment
  labels:
    app: tree
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tree
  template:
    metadata:
      labels:
        app: tree
    spec:
      containers:
        - name: trees
          image: ecosia/apple
          imagePullPolicy: Never
          ports:
            - containerPort: 5000


---
apiVersion: v1
kind: Service
metadata:
  name: forest-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: tree
  type:
