Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: local.ecosia.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forest-service
                port:
                  number: 80
